Footter updates, furter register component styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>| Shadow Boxing Workout</title>
 </head>
 
-<body>
+<body class="bg-black">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
