google font links added.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:wght@900&display=swap"
+    rel="stylesheet">
+  <!-- TITLE -->
   <title>| Shadow Boxing Workout</title>
 </head>
 
