shadow boxing view and component added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>| Shadow Boxing Workout</title>
 </head>
 
-<body class="bg-almost-black">
+<body class="bg-almost-black h-screen">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
