--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <title>| Shadow Boxing Workout</title>
 </head>
 
-<body class="bg-almost-black h-screen">
+<body class="bg-custom-black h-screen text-custom-white">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 
