update: text formatting

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="A simple platform for those training in boxing or other combat sports aimed at supporting users' training and sports development; Based on the most common boxing training - shadow boxing. It was intended to allow users at any level to work on punch combinations, footwork or reflexes even more effectively.">
+  <meta name="keywords" content="Shadow Boxing, Boxing, Sport, Training, Weight Measurements, Weight Monitor">
+  <meta name="author" content="Tomasz Leszczynski">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="apple-touch-icon" sizes="180x180" href="src/assets/icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="src/assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="src/assets/icons/favicon-16x16.png">
